css/style.css
body {
  background-color: rgb(249, 249, 249);
  font-family: 'Zen Maru Gothic', sans-serif;
}

.container {
  margin: 0 auto;
  max-width: 1000px;
}

/* Header Start */
#header-navbar {
  background-color: rgb(245, 65, 100);
  box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.15);
  color: rgb(255, 255, 255);
}
/* Header End */

/* Pokemon Page Start */
#page-cards > div {
  padding: 0.5rem;
  transition: 0.5s;
}

#page-cards a {
  display: block;
  padding: 1rem;
  text-align: center;
  text-decoration: none;
}

.pokemon-card {
  background-color: rgb(238, 238, 238);
  border-radius: 6px;
  height: 100%;
  transition: ease-out 0.4s;
}

.pokemon-card:hover {
  background-color: rgb(226, 226, 226);
  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
}

.card-details {
  margin: 0.5rem 0;
  padding: 0.25rem 0;
}

.card-details > p {
  letter-spacing: 0.85px;
  text-transform: capitalize;
}

.card-details > p:first-child {
  font-size: 0.85rem;
}

.card-details > p:last-child {
  font-size: 1.15rem;
}
/* Pokemon Page End */

/* Search Bar Start */
#search-form {
  position: relative;
  text-transform: capitalize;
}

#search-bar,
#autocomplete-list,
.autocomplete-option {
  max-width: 200px;
  width: 100%;
}

#autocomplete-list {
  box-shadow: 0 0 12px rgba(0, 0, 0, 0.15);
  max-height: 300px;
  overflow-x: hidden;
  position: absolute;
}

.autocomplete-option {
  background-color: rgb(243, 242, 247);
  color: rgb(85, 85, 85);
  cursor: pointer;
  padding: 6px;
}

.autocomplete-option:hover {
  background-color: rgb(219, 226, 235);
}
/* Search Bar End */

/* Pagination Start */
.pagination {
  bottom: 0;
  box-shadow: 0 0 15px rgba(0, 0, 0, 0.15);
  position: fixed;
}
/* Pagination End */

/* Modal Start */
.modal-dialog {
  max-width: 700px;
  padding: 0.5rem;
}

.modal-header,
.modal-footer {
  background-color: #eee;
}

#modal-img {
  width: 300px;
}

#modal-table {
  text-transform: capitalize;
}

#modal-img,
#modal-table {
  flex: 1;
}

#modal-table .height,
#modal-table .weight {
  text-transform: lowercase;
}

#modal-table .type > div {
  border-radius: 4px;
  border: 1px solid rgb(0, 0, 0, 0.12);
  color: #fff;
  display: inline-block;
  margin-right: 4px;
  padding: 0.2rem 0.5rem;
}

#modal-table .forms {
  display: inline-block;
  max-height: 120px;
  overflow-y: auto;
  width: 100%;
}

#modal-table .forms a {
  display: block;
  width: max-content;
}
/* Modal End */

/* Types Colors Start */
.normal {
  background-color: #c2b7b1;
}

.fire {
  background-color: #f26546;
}

.water {
  background-color: #3ba8f5;
}

.electric {
  background-color: #f5ca54;
}

.grass {
  background-color: #33be66;
}

.ice {
  background-color: #86d6eb;
}

.fighting {
  background-color: #ad5849;
}

.poison {
  background-color: #a54792;
}

.ground {
  background-color: #d19b5e;
}

.bug {
  background-color: #92cb61;
}

.flying {
  background-color: #8292ec;
}

.psychic {
  background-color: #ff5599;
}

.bug {
  background-color: #aabb22;
}

.rock {
  background-color: #bbaa66;
}

.ghost {
  background-color: #6666bb;
}

.dragon {
  background-color: #7766ee;
}

.dark {
  background-color: #775544;
}

.steel {
  background-color: #aaaabb;
}

.fairy {
  background-color: #ee99ee;
}
/* Types Colors End */

/* Media Queries Start */
@media (max-width: 700px) {
  .modal-dialog {
    justify-content: center;
  }

  .modal-content {
    width: 400px;
  }

  .modal-body {
    flex-wrap: wrap;
  }
}

@media (max-width: 476px) {
  #navbar-logo {
    display: none !important;
  }

  #header-navbar .container {
    justify-content: center;
  }
}

@media (max-width: 400px) {
  .col-6 {
    width: 100%;
  }
}
/* Media Queries End */

